--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-
+<iframe width="100%" height="839" frameborder="0"
+  src="https://observablehq.com/embed/b868228ad91baadd@195?cells=viewof+button%2Cstatement%2Censemble"></iframe>
